--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,9 +1,7 @@
 - layout: left
-  company: The Boring Company
-  link: boringcompany.com
-  job_title: Senior Network System Administrator
-  dates: November 2017 - Present
-  quote: >
-   Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+  company: QI Learning Academy
+  link: https://qi.ucsd.edu/
+  job_title:  Resarch Intern
+  dates: June 2019 - March 2020
   description: | # this will include new lines to allow paragraphs
-    Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+  •Research Internship thematically related to the “Changing Planet” theme, on diverse topics including but not limited to autonomous vehicles, San Diego city data, availability of potable water, and visualizations of different models of future climate predictions.
